# one-time-secret-share

./: .behaverc  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  pyproject.toml  pytype.cfg  requirements.txt  runtime.txt  vercel.json
.github/ISSUE_TEMPLATE/: bug-report.yaml  enhancement.yaml
.github/workflows/: deploy.yml  deploy_develop.yml  lint.yml  secure.yml  test.yml  type.yml
src/onetime/: __init__.py
src/onetime/configurator/: containers.py  settings.py
src/onetime/domain/: model.py
src/onetime/entrypoints/web/Flask/: app.py  form.py  views.py
src/onetime/entrypoints/web/Flask/templates/onetimesecrets/: index.html
src/onetime/entrypoints/web/app/: __init__.py  asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
src/onetime/entrypoints/web/onetimesecrets/: apps.py  forms.py  tests.py  urls.py  views.py
src/onetime/entrypoints/web/onetimesecrets/templates/onetimesecrets/: 400.html  base.html  index.html  show_secret.html
src/onetime/entrypoints/web/web_flask/: __init__.py  app.py  containers.py  views.py
src/onetime/entrypoints/web/web_flask/static/: copy.js
src/onetime/entrypoints/web/web_flask/templates/onetimesecrets/: 400.html
src/onetime/entrypoints/web_flask/: app.py  application.py  forms.py  tests.py  views.py
src/onetime/entrypoints/web_flask/blueprints/: views.py
src/onetime/entrypoints/web_flask/templates/onetimesecrets/: show_secret.html
src/onetime/services/: manager.py
src/onetime/use_cases/: exceptions.py  manager.py  validators.py
tests/: conftest.py
tests/behave_tests/features/: secret_and_url_manager.feature  secret_manager.feature  secret_storage.feature
tests/behave_tests/steps/: secret_and_url_manager_steps.py  secret_manager_steps.py  secret_storage_steps.py
tests/domain/: test_models.py
tests/property_based_tests/domain/: test_domain.py
tests/property_based_tests/services/: test_secret_manager.py
tests/property_based_tests/use_cases/: test_secret_and_url_manager.py
tests/services/: test_secret_manager.py  test_url_uuid_generator.py
tests/use_cases/: test_secret_and_url_manager.py
