[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "onetime"
authors = [{name = "Shako Rzayev", email = "rzayev.sehriyar@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "Django == 5.0.3",
    "readonce >= 1.1.3",
    "cryptography >= 41.0.1",
    "dependency-injector>=4.41.0",
    "django-csp >=3.7",
    "django-cors-headers >=4.0.0",
    "whitenoise >=6.4.0",
    "gunicorn >=20.1.0",
    "Flask >= 3.0.0",
    "Flask-WTF >= 1.2.1",
    "Flask-Cors >= 4.0.0",
    "django-permissions-policy >=4.16.0",
]

[project.urls]
Home = "https://github.com/ShahriyarR/one-time-secret-share"


[project.optional-dependencies]
doc = []
dev = [
    "black >=23.1.0",
    "isort >=5.12.0",
    "autoflake >=1.4",
    "flake8 >=6.0.0",
    "pre-commit >=2.21.0",
    "pytype >= 2022.12.15",
    "bandit >= 1.7.5",
    "pip-audit",
    "flake8-bugbear >= 22.12.6",
    "django-debug-toolbar",
    "django-browser-reload",
    "rich",
    "djhtml",
    ]
test = [
    "pytest ==7.1.3",
    "pytest-cov == 3.0.0",
    "behave >=1.2.6",
    "hypothesis >=6.79.2",
]


[tool.isort]
profile = "black"
py_version = 310
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.bandit]
skips = ["B311"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration relatively slow (deselect with '-m \"not integration\"')",
    "serial",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = "tests"